<resources>
    <string name="app_name">Work Hours</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>

    <string name="minutes_length">%d minutes</string>
    <string name="hours_length">%d hours</string>
    <string name="seconds_length">%d hrs %d min</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">On The Clock</string>
    <string name="nav_header_subtitle">Work Hours Recording</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_today">Hours Today</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_monthly">Monthly Hours</string>
    <string name="menu_weekly">Weekly Hours</string>
    <string name="menu_overtime">Overtime Hours</string>


    <string name="clear_Btn">Clear All Data</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="access_data_button">History</string>
    <string name="back_button">Return to Main Screen</string>
    <string name="drawer_title">History</string>
    <string name="start_text">Clock In Time</string>
    <string name="stop_text">Clock Out Time</string>/>
</resources>
