<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/hours_today"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="@string/drawer_title">
        <menu>
            <item
                android:id="@+id/hours_by_week"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_weekly" />
            <item
                android:id="@+id/hours_by_month"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_monthly" />
            <item
                android:id="@+id/overtime_hours"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_overtime" />

        </menu>
    </item>

</menu>
